Set layout timestamp when fixating semi-positioned icons. Fixes #550807.
2008-09-04  Christian Neumair  <cneumair@gnome.org>

	* libnautilus-private/nautilus-icon-container.c
	(finish_adding_new_icons):
	Set layout timestamp when fixating semi-positioned icons. Fixes
	#550807.

svn path=/trunk/; revision=14584

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2008-09-04  Christian Neumair  <cneumair@gnome.org>
+
+	* libnautilus-private/nautilus-icon-container.c
+	(finish_adding_new_icons):
+	Set layout timestamp when fixating semi-positioned icons. Fixes
+	#550807.
+
 2008-09-04  Robert-André Mauchin  <zebob.m@pengzone.org>
 
 	* po/LINGUAS:
