Plug 3 small leaks
svn path=/trunk/; revision=14589

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2008-09-05  Matthias Clasen  <mclasen@redhat.com>
+
+	Bug 550009 – small leaks
+
+	* libnautilus-private/nautilus-directory-background.c: Plug 
+	three small memory leaks.
+
 2008-09-04  Cosimo Cecchi  <cosimoc@gnome.org>
 
 	* configure.in: Bump GTK+ required version to 2.13.0.
