--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-09-05  Gil Forcada  <gforcada@gnome.org>
+
+	* ca.po: Minor fix by Joan Duran.
+
 2008-09-05  Tomasz Dominikowski  <tdominikowski@aviary.pl>
 
 	* pl.po: Updated Polish translation
