--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-09-06  Funda Wang  <fundawang@gmail.com>
+
+	* zh_CN.po: Updated zh_CN translation.
+
 2008-09-05  Gil Forcada  <gforcada@gnome.org>
 
 	* ca.po: Minor fix by Joan Duran.
