--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-09-06  Philip Withnall  <philip@tecnocode.co.uk>
+
+	* en_GB.po: Updated British English translation.
+
 2008-09-06  Claude Paroz  <claude@2xlibre.net>
 
 	* fr.po: Updated French translation.
