--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-09-07  Reinout van Schouwen <reinouts@gnome.org>
+
+	* nl.po: Translation updated by Reinout van Schouwen.
+
 2008-09-06  Luca Ferretti  <elle.uca@libero.it>
 
 	* it.po: Updated Italian translation.
