--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2008-09-08  Christian Neumair  <cneumair@gnome.org>
 
+	* NEWS:
+	Update for release.
+
+2008-09-08  Christian Neumair  <cneumair@gnome.org>
+
 	* libnautilus-private/nautilus-icon-container.c (select_range),
 	(keyboard_move_to), (handle_icon_button_press):
 	Allow to select range additively when pressing ctrl and shift, i.e.
