post-release bump to 2.24.0.
2008-09-08  Christian Neumair  <cneumair@gnome.org>

	* configure.in: post-release bump to 2.24.0.

=== nautilus 2.23.92 ===

svn path=/trunk/; revision=14602

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2008-09-08  Christian Neumair  <cneumair@gnome.org>
 
+	* configure.in: post-release bump to 2.24.0.
+
+=== nautilus 2.23.92 ===
+
+2008-09-08  Christian Neumair  <cneumair@gnome.org>
+
 	* NEWS:
 	Update for release.
 
