--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-09-09 Baris Cicek <baris@teamforce.name.tr>
+
+	* tr.po: Updated Turkish translation
+	
 2008-09-08  Changwoo Ryu  <cwryu@debian.org>
 
 	* ko.po: Updated Korean translation by Young-Ho Cha.
