Tamil translation updated
svn path=/trunk/; revision=14604

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-09-09  I. Felix <ifelix@redhat.com>
+
+	* ta.po:  Tamil Translation updated by Tirumurthi Vasudevan
+
 2008-09-09 Baris Cicek <baris@teamforce.name.tr>
 
 	* tr.po: Updated Turkish translation
