--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-09-09  Laurent Dhima  <laurenti@alblinux.net>
+
+	* sq.po: Updated Albanian Translation.
+
 2008-09-09  I. Felix <ifelix@redhat.com>
 
 	* ta.po:  Tamil Translation updated by Tirumurthi Vasudevan
