--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-09-09  Inaki Larranaga Murgoitio  <dooteo@euskalgnu.org>
+
+	* eu.po: Updated Basque translation.
+
 2008-09-09  Laurent Dhima  <laurenti@alblinux.net>
 
 	* sq.po: Updated Albanian Translation.
