--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-09-09  Robert Sedak  <robert.sedak@sk.t-com.hr>
+
+	* hr.po: Updated Croatian translation.
+
 2008-09-09  Sandeep Shedmake  <sshedmak@redhat.com>
 
 	* mr.po: Updated Marathi Translations
