Updated Brazilian Portuguese translation.
svn path=/trunk/; revision=14611

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-09-09 Og Maciel <ogmaciel@gnome.org>
+
+	* pt_BR.po: Revision of Brazilian Portuguese translation by Vladimir Melo.
+
 2008-09-09  Robert Sedak  <robert.sedak@sk.t-com.hr>
 
 	* hr.po: Updated Croatian translation.
