--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-09-10  Theppitak Karoonboonyanan  <thep@linux.thai.net>
+
+	* th.po: Updated Thai translation.
+
 2008-09-09 Og Maciel <ogmaciel@gnome.org>
 
 	* pt_BR.po: Revision of Brazilian Portuguese translation by Vladimir Melo.
