--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-09-12  Reinout van Schouwen <reinouts@gnome.org>
+
+        * nl.po: Translation updated by Reinout van Schouwen.
+
 2008-09-11  Hendrik Richter  <hendrikr@gnome.org>
 
 	* de.po: Updated German translation.
