updated hebrew translation
svn path=/trunk/; revision=14618

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-09-12  Yair Hershkovitz  <yairhr@gmail.com>
+
+	* he.po: Updated Hebrew translation.
+
 2008-09-12  Reinout van Schouwen <reinouts@gnome.org>
 
         * nl.po: Translation updated by Reinout van Schouwen.
